styles.css
/* Globals */

html {
	font-size: 1rem;
	text-align: center;
	overflow-y: scroll;
	overflow-wrap: break-word;
	font-family: Georgia, serif;
	background-color: #ffffffff;
	-webkit-tap-highlight-color: transparent;
}

a {
	color: #000000ff;
	font-weight: 900;
	&:hover { opacity: 0.64; }
}

h1 { margin: 0; }

h1, h2 { font-size: 1.2rem; }

h3 { font-size: 1.08rem; }

h4 {
	margin: 0;
	font-weight: normal;
	display: inline-block;
}

pre {
	font-weight: 900;
	line-height: 100%;
	user-select: none;
}

nav {
	& a {
		font-size: 1.16rem;
		text-decoration: none;
		display: inline-block;
		margin: -16px 8px 0px 8px;
		& #depressed { opacity: 0.64; }
	}
}

/* Classes and IDs */

.print { display: none; }

.passive { color: #666666ff; }

.disabled { pointer-events: none; }

.no-print { display: normal; }

.shortcut {
	margin-top: 24px;
	font-weight: 900;
	text-align: center;
}

.jump-scroll {
	margin-bottom: 16px;
	display: inline-block;
	text-decoration: none;
}

.v-list { margin-left: -16px; }

.h-list {
	margin-left: -40px;
	li {
		display: inline;
		position: relative;
		&:before { content: "\00a0\00a0\2022\00a0\00a0"; }
		&:first-of-type:before { content: 'Technologies\00a0\00a0\25B8\00a0\00a0'; }
	}
}

#not-found {
	margin: 0;
	font-size: 2rem;
	font-family: serif;
	margin-bottom: 24px;
}

#name {
	display: inline-block;
	text-decoration: none;
}

#connections {
	color: grey;
	margin-top: 16px;
	font-weight: normal;
}

button {
	margin: 0;
	padding: 0;
	border: none;
	font-size: 1rem;
	background-color: #00000000;
	& pre:hover {
		opacity: 0.64;
		cursor: pointer;
	}
}

table {
	width: 100%;
	margin: auto;
	max-width: 768px;
	margin-top: 16px;
	table-layout: fixed;
	#input-row {
		::placeholder {
			font-size: 1rem;
			font-family: Georgia;
		}
		td {
			input[type="text"] {
				padding: 0;
				width: 100%;
				font-size: 1rem;
				font-family: Georgia;
				box-sizing: content-box;
				border: 1px solid #00000000;
				&:placeholder-shown { border: 1px solid grey; }
			}
		}
	}
	#header-row { font-family: monospace; }
	th, td {
		padding: 8px;
		text-align: left;
		border: 2px solid black;
		a { font-weight: normal; }
	}
}

#resume {
	margin: auto;
	max-width: 768px;
	text-align: left;
	& h1 {
		padding-top: 8px;
		font-size: 2.4rem;
	}
}

#portfolio {
	margin: 16px 0px -16px 0px;
	& figure {
		margin: auto;
		& a { &:hover { opacity: 1; } }
		& img {
			width: 92vw;
			height: auto;
			padding: 4px;
			max-width: 540px;
			border: 4px double #000000ff;
		}
		& figcaption {
			margin-top: 8px;
			font-size: 1.08rem;
			& a { &:hover { opacity: 0.64; } }
		}
		& blockquote {
			max-width: 540px;
			margin-left: auto;
			margin-right: auto;
		}
	}
}

#headshot {
	padding: 4px;
	max-width: 216px;
	margin-top: 16px;
	border: 4px double #000000ff;
}

#socials {
	& img {
		width: 24px;
		height: 24px;
	}
	& a {
		display: inline-block;
		margin: 0px 4px 0px 4px;
	}
	& * { vertical-align: middle; }
}

#terminal {
	border: 2px groove;
	box-sizing: border-box;
	padding: 0px 8px 0px 8px;
	font-family: monospace, Lucida Console, Courier New;
	b { color: #000000ff; }
	a { white-space: normal; }
	pre {
		margin-top: -16px;
		text-shadow: 0.08px 0 0, 0 0.08px 0, 0 -0.08px 0, -0.08px 0 0;
	}
	.project { * { margin: 8px 0px 8px 0px; } }
}

/* Media queries */

@media screen and (max-width: 359px) { pre { font-size: 0.72rem; } }

@media screen and (min-width: 401px) and (max-width: 440px) { pre { font-size: 0.96rem; } }

@media screen and (min-width: 360px) and (max-width: 400px) { pre { font-size: 0.84rem; } }

@media screen and (min-width: 359px) and (max-width: 440px) { .shortcut { display: none; } }

@media print {
	.print { display: block; }
	.no-print { display: none; }
}

